Fix build issue that was cause by findByEmail's optional type